--- a/public.sebmade/app/styles/main.css
+++ b/public.sebmade/app/styles/main.css
@@ -31,3 +31,7 @@
     font-weight: bold;
     vertical-align: middle;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none;
+}
