--- a/public.sebmade/app/views/main.html
+++ b/public.sebmade/app/views/main.html
@@ -9,7 +9,7 @@
         <div class="well">
             <div class="media">
                 <a class="pull-left" href="#" ng-show="p.twitter">
-                    <img class="media-object img-circle" src="/pictures/avatars/{{p.twitter}}.jpg" width="64" height="64">
+                    <img class="media-object img-circle" src="/pictures/avatars/{{p.twitter}}.jpg" width="64" height="64" ng-cloak>
                 </a>
                 <div class="media-body">
                     <h4><a href="#/player/{{p.id}}">{{p.firstName}} {{p.lastName}}</a></h4>
