--- a/public.sebmade/app/views/player.html
+++ b/public.sebmade/app/views/player.html
@@ -9,4 +9,5 @@
     <input type="text" class="input-medium" ng-model="player.framework">
 </form>
 <a class="btn" href="#/">Annuler</a>
-<button class="btn" ng-click="updatePlayer()">Ajouter</button>
+<button class="btn" ng-click="updatePlayer()" ng-show="player.id">Modifier</button>
+<button class="btn" ng-click="addPlayer()" ng-hide="player.id">Ajouter</button>
