--- a/public.k33g/templates/fightsView.html
+++ b/public.k33g/templates/fightsView.html
@@ -9,3 +9,6 @@
     </li>
     <% }); %>
 </ol>
+<div class="alert alert-success">
+    <h4>Angular : <%= scores.ANGULAR %> | Ember : <%= scores.EMBER %> | Backbone : <%= scores.BACKBONE %></h4>
+</div>
