--- a/public.sebmade/app/views/player.html
+++ b/public.sebmade/app/views/player.html
@@ -1,13 +1,13 @@
 <form>
     <label>Prénom : </label>
-    <input type="text" class="input-medium" ng-model="player.firstName">
+    <input type="text" class="input-medium">
     <label>Nom : </label>
-    <input type="text" class="input-medium" ng-model="player.lastName">
+    <input type="text" class="input-medium">
     <label>Twitter : </label>
-    <input type="text" class="input-medium" ng-model="player.twitter">
+    <input type="text" class="input-medium">
     <label>Framework : </label>
-    <input type="text" class="input-medium" ng-model="player.framework">
+    <input type="text" class="input-medium">
 </form>
-<a class="btn" href="#/">Annuler</a>
-<button class="btn" ng-click="updatePlayer()" ng-show="player.id">Modifier</button>
-<button class="btn" ng-click="addPlayer()" ng-hide="player.id">Ajouter</button>
+<a class="btn">Annuler</a>
+<a class="btn">Modifier</a>
+<a class="btn">Ajouter</a>
