--- a/public.sebmade/app/views/player.html
+++ b/public.sebmade/app/views/player.html
@@ -8,6 +8,6 @@
     <label>Framework : </label>
     <input type="text" class="input-medium" ng-model="player.framework">
 </form>
-<a class="btn" href="#/">Annuler</a>
-<button class="btn" ng-click="updatePlayer()" ng-show="player.id">Modifier</button>
-<button class="btn" ng-click="addPlayer()" ng-hide="player.id">Ajouter</button>
+<a class="btn" ng-href="#/">Annuler</a>
+<a class="btn" ng-click="updatePlayer()" ng-show="player.id">Modifier</a>
+<a class="btn" ng-click="addPlayer()" ng-hide="player.id">Ajouter</a>
