--- a/public.sebmade/app/views/main.html
+++ b/public.sebmade/app/views/main.html
@@ -5,10 +5,26 @@
 </div>
 <p class="lead">Les Joueurs</p>
 <div class="row">
-    <div class="span4">
+    <div class="span4" ng-repeat="p in players">
         <div class="well">
+            <div class="media">
+                <a class="pull-left" href="#">
+                    <img class="media-object img-circle" ng-src="pictures/avatars/{{p.twitter}}.jpg" width="64" height="64">
+                </a>
 
+                <div class="media-body">
+                    <h4><a ng-href="#/player/{{p.id}}">{{p.firstName}} {{p.lastName}}</a></h4>
+
+                    <p><a target="_blank" ng-href="http://twitter.com/{{p.twitter}}">{{p.twitter}}</a> - {{p.framework}}
+                    </p>
+                    <label class="checkbox" for="checkbox">
+                        <input type="checkbox" value="true" id="checkbox" name="checkbox" ng-model="p.isReady">
+                        <span>prêt au combat</span>
+                    </label>
+                    <button ng-click="removePlayer(p)">déclare forfait</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<a class="btn">Ajouter un joueur</a>
+<a class="btn" href="#/player/">Ajouter un joueur</a>
