--- a/public.k33g/templates/playersView.html
+++ b/public.k33g/templates/playersView.html
@@ -8,7 +8,7 @@
                 -moz-box-shadow: none;
                 box-shadow: none;
             ">
-            <img src="pictures/avatars/<%= player.picture %>.jpg" style="width: 180px; height: 180px;" class="img-circle">
+            <img src="pictures/avatars/<%= player.twitter %>.jpg" style="width: 180px; height: 180px;" class="img-circle">
             <div class="caption">
                 <h4><%= player.firstName %> <%= player.lastName %></h4>
                 <p>
