--- a/public.sebmade/app/views/main.html
+++ b/public.sebmade/app/views/main.html
@@ -47,7 +47,7 @@
 
         </div>
     </div>
-    <a class="btn" ng-click="removeFight(f)">Annuler le combat</a>
+    <a class="btn" ng-click="removeFight(fight)">Annuler le combat</a>
     <br><br>
 </div>
 
