--- a/public.tchak/app/templates/player/_form.hbs
+++ b/public.tchak/app/templates/player/_form.hbs
@@ -1,11 +1,11 @@
 <label>Prénom : </label>
-{{input class="input-medium" valueBinding="firstName"}}
+{{input class="input-medium" value=firstName}}
 <label>Nom : </label>
-{{input class="input-medium" valueBinding="lastName"}}
+{{input class="input-medium" value=lastName}}
 <label>Twitter : </label>
-{{input class="input-medium" valueBinding="twitter"}}
+{{input class="input-medium" value=twitter}}
 <label>Framework : </label>
-{{input class="input-medium" valueBinding="framework"}}
+{{input class="input-medium" value=framework}}
 
 <br>
 {{#linkTo index class="btn"}}Annuler{{/linkTo}}
