change bootstrap theme

--- a/public.tchak/app/templates/index.hbs
+++ b/public.tchak/app/templates/index.hbs
@@ -14,6 +14,8 @@
           {{/linkTo}}
         </h4>
 
+        <img {{bindAttr src=avatarUrl}}>
+
         <p>{{twitter}} - {{framework}}</p>
 
         <label class="checkbox">
