--- a/public.tchak/app/templates/player/_form.hbs
+++ b/public.tchak/app/templates/player/_form.hbs
@@ -8,4 +8,4 @@
 {{input class="input-medium" value=framework}}
 
 <br>
-{{#linkTo index class="btn"}}Annuler{{/linkTo}}
+<a {{action cancel}} class="btn">Annuler</a>
