--- a/public.tchak/app/templates/index.hbs
+++ b/public.tchak/app/templates/index.hbs
@@ -3,63 +3,6 @@
 
     <p>Il ne doit en rester qu'un</p>
 </div>
-<p class="lead">Les Joueurs</p>
-<div class="row">
-  {{#each players}}
-    <div class="span4">
-      <div class="well">
-        <div class="media">
-          <span class="pull-left">
-            <img class="media-object img-circle" {{bindAttr src=avatarUrl}} width="64" height="64">
-          </span>
 
-          <div class="media-body">
-            <h4>
-              {{#linkTo player.edit this}}
-                {{firstName}} {{lastName}}
-              {{/linkTo}}
-            </h4>
-
-            <p>
-              <a {{bindAttr href=twitterUrl}} target="_blank">@{{twitter}}</a> - {{framework}}
-            </p>
-
-            <label class="checkbox">
-              {{input type="checkbox" checked=ready}}
-              <span>prêt au combat</span>
-            </label>
-
-            <button {{action removePlayer this}}>déclare forfait</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  {{/each}}
-</div>
-
-{{#linkTo player class="btn"}}Ajouter un joueur{{/linkTo}}
-
-{{#if readyToFight}}
-  <a class="btn" {{action createFight}}>Envoyer sur le ring</a>
-{{/if}}
-
-<br><br>
-<div>
-  {{#each fights}}
-    <div class="row">
-        <div class="span5">
-          {{render opponent firstOpponent}}
-        </div>
-        <div class="span2 centered">
-            <br>
-            <br>
-            <h4>VS</h4>
-        </div>
-        <div class="span5">
-          {{render opponent secondOpponent}}
-        </div>
-    </div>
-    <a class="btn" {{action removeFight this}}>Annuler le combat</a>
-    <br><br>
-  {{/each}}
-</div>
+{{partial "players"}}
+{{partial "fights"}}
