prevent to many opponents

--- a/public.tchak/app/templates/_fights.hbs
+++ b/public.tchak/app/templates/_fights.hbs
@@ -1,6 +1,9 @@
 {{#if readyToFight}}
   <a class="btn" {{action createFight}}>Envoyer sur le ring</a>
 {{/if}}
+{{#if toManyPlayers}}
+  Un combat c'est un contre un pas deux contre trois :)
+{{/if}}
 
 <br><br>
 <div>
