--- a/public.tchak/app/templates/_fights.hbs
+++ b/public.tchak/app/templates/_fights.hbs
@@ -1,7 +1,7 @@
 {{#if readyToFight}}
   <a class="btn" {{action createFight}}>Envoyer sur le ring</a>
 {{/if}}
-{{#if toManyPlayers}}
+{{#if tooManyPlayers}}
   Un combat c'est un contre un pas deux contre trois :)
 {{/if}}
 
