--- a/public.tchak/app/templates/index.hbs
+++ b/public.tchak/app/templates/index.hbs
@@ -4,5 +4,5 @@
     <p>Il ne doit en rester qu'un</p>
 </div>
 
-{{partial "players"}}
-{{partial "fights"}}
+{{!partial "players"}}
+{{!partial "fights"}}
